--- a/9_regExp.html
+++ b/9_regExp.html
@@ -4,17 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script>
+    //假设从服务器端请求过来一个敏感词数组
+    var kws=["明月","青天","白鹭","紫烟"];
+    //希望正则是明月|青天|白鹭
+    //var reg=kws.join("|");
+    //console.log(reg);
+  </script>
 </head>
 <body>
 <script>
 //请用户输入一条消息内容
 var input=prompt("请输入消息内容");
-//查找消息中是否包含“我草”
-var arr=input.match(/([我卧]|wo)\s*([艹草槽]|cao)/i);
+//查找消息中是否包含服务器要求我们防住的几个词
+var arr=input.match(new RegExp(kws.join("|")));
 if(arr!=null){//如果找到
   //就在网页上输出"包含敏感词，禁止发送"
-//(向)网页(中)写(一行文本或一行HTML代码)
-  //document.write(`<h1 style="color:#555">在位置${arr["index"]}发现敏感词"${arr["0"]}",禁止发送</h1>`);
   document.write(`<h1 style="color:#555">在位置${arr.index}发现敏感词"${arr[0]}",禁止发送</h1>`);
 }else{//否则
   //就在网页上输出"然哥说: xxxx"
